--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react-dom": "^17.0.6",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"styled-components": "^5.3.0",
 		"typescript": "^4.3.2"
 	},
 	"devDependencies": {
