--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@material-ui/core": "^4.11.4",
+		"@types/material-ui": "^0.21.8",
 		"@types/react": "^17.0.9",
 		"@types/react-dom": "^17.0.6",
 		"react": "^17.0.2",
