--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"typescript": "^4.3.2"
 	},
 	"devDependencies": {
+		"css-loader": "^5.2.6",
 		"html-webpack-plugin": "^5.3.1",
+		"style-loader": "^2.0.0",
 		"ts-loader": "^9.2.3",
 		"webpack": "^5.38.1",
 		"webpack-cli": "^4.7.0",
