--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://mleng89.github.io/TTP-Pinterest/",
 	"name": "React-TypeScript-Boilerplate",
 	"version": "1.0.0",
 	"description": "",
@@ -6,7 +7,9 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "webpack serve",
-		"build": "webpack --mode production"
+		"build": "webpack --mode production",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,6 +27,7 @@
 	},
 	"devDependencies": {
 		"css-loader": "^5.2.6",
+		"gh-pages": "^3.2.1",
 		"html-webpack-plugin": "^5.3.1",
 		"style-loader": "^2.0.0",
 		"ts-loader": "^9.2.3",
