Edit: Script edited to accomodate deployment

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dev": "webpack serve",
 		"build": "webpack --mode production",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d dist"
 	},
 	"keywords": [],
 	"author": "",
