--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/react-dom": "^17.0.6",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.3.0",
 		"typescript": "^4.3.2"
 	},
